--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>nwmsu.bigdata.kafkajava.sec01.group02</groupId>
-  <artifactId>kafka.java.app.group</artifactId>
+  <groupId>edu.nwmissouri.bigdatasec2group2</groupId>
+  <artifactId>big-data-kaftka-java-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>kafka.java.app.group</name>
+  <name>big-data-kaftka-java-app</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -24,6 +24,26 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+     <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>2.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.30</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.30</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.13.3</version>
     </dependency>
   </dependencies>
 
@@ -68,6 +88,23 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <archive>
+              <manifest>
+                <mainClass>edu.nwmissouri.kafka.simple.ProducerByAnnie</mainClass>
+                <mainClass>edu.nwmissouri.kafka.simple.ProducerByAlex</mainClass>
+                <mainClass>edu.nwmissouri.kafka.simple.ProducerBySunny</mainClass>
+                <mainClass>edu.nwmissouri.kafka.simple.ProducerByHarika</mainClass>
+              </manifest>
+            </archive>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
