--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.nwmissouri.bigdatasec2group2</groupId>
-  <artifactId>big-data-kaftka-java-app</artifactId>
+  <groupId>nwmsu.bigdata.kafkajava.sec01.group02.ConsumerByAnnie</groupId>
+  <artifactId>kafka-java-app-group</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>big-data-kaftka-java-app</name>
