--- a/src/main/resources/consumer1.properties
+++ b/src/main/resources/consumer1.properties
@@ -2,6 +2,6 @@ BOOTSTRAP_SERVERS_CONFIG=localhost:9092
 KEY_DESERIALIZER_CLASS_CONFIG=org.apache.kafka.common.serialization.ByteArrayDeserializer
 VALUE_DESERIALIZER_CLASS_CONFIG=org.apache.kafka.common.serialization.StringDeserializer
 TOPIC=test
-GROUPID=group1
-CLIENT_ID_CONFIG=simple
+GROUPID=nwmsu.bigdata.kafkajava.sec01.group02
+# CLIENT_ID_CONFIG=simple
 TIMEOUT_MS=100
